--- a/views/concept.html
+++ b/views/concept.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="concept.css">
+	<link rel="stylesheet" href="../public/stylesheets/style.css">
 </head>
 <body>
 	<div class="container">
@@ -19,7 +19,7 @@
 				</div>
 			</div> <!-- End prensetation -->
 		</section>
-		<section class="Team concept text-justify">
+		<section class="team concept text-justify">
 			<h2 class="text-center">Team</h2>
 			<div class="row">
 				<div class="col-12 col-md-4">
@@ -34,37 +34,32 @@
 						Et sinon, bravo à ceux qui lisent ce texte.
 					</p>
 				</div>
-				<div class="col-12 col-md-8">
+				<div id="photo1" class="col-12 col-md-8">
 					<div class="row">
-						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="../public/images/alex.jpg" alt="image du personnel de la team">
+						<div id="crossfade" class="col-12 col-md-6 ">
+							<img class="bottom img-fluid m-1" src="../public/images/alex2.jpg" alt="image du personnel de la team">
+							<img class=" top img-fluid m-1" src="../public/images/alex.jpg" alt="image du personnel de la team">
+
 						</div>
-						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="../public/images/aurelien.jpg" alt="image du personnel de la team">
+						<div  class="col-12 col-md-6 ">
+							<img class="top img-fluid m-1" src="../public/images/aurelien2.jpg" alt="image du personnel de la team">
+							<img class="bottom img-fluid m-1" src="../public/images/aurelien.jpg" alt="image du personnel de la team">
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="../public/images/elisa.jpg" alt="image du personnel de la team">
+						<div  class="col-12 col-md-6 ">
+							<img class="top img-fluid m-1" src="../public/images/elisa2.jpg" alt="image du personnel de la team">
+							<img class="bottom img-fluid m-1" src="../public/images/elisa.jpg" alt="image du personnel de la team">
 						</div>
-						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="../public/images/greg.jpg" alt="image du personnel de la team">
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="../public/images/josephine.jpg" alt="image du personnel de la team">
-						</div>
-						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="../public/images/" alt="image du personnel de la team">
+						<div  class="col-12 col-md-6 ">
+							<img class="top img-fluid m-1" src="../public/images/greg2.jpg" alt="image du personnel de la team">
+							<img class="bottom img-fluid m-1" src="../public/images/greg.jpg" alt="image du personnel de la team">
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="../public/images/" alt="image du personnel de la team">
-						</div>
-						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="../public/images/" alt="image du personnel de la team">
+						<div  class="col-12 col-md-6 ">
+							<img class="top img-fluid m-1" src="../public/images/josephine2.jpg.jpg" alt="image du personnel de la team">
+							<img class="bottom img-fluid m-1" src="../public/images/josephine.jpg.jpg" alt="image du personnel de la team">
 						</div>
 					</div>
 				</div>
