add my footer + photos staff

--- a/views/concept.html
+++ b/views/concept.html
@@ -36,31 +36,45 @@
 				</div>
 				<div id="photo1" class="col-12 col-md-8">
 					<div class="row">
-						<div id="crossfade" class="col-12 col-md-6 ">
-							<img class="bottom img-fluid m-1" src="../public/images/alex2.jpg" alt="image du personnel de la team">
-							<img class=" top img-fluid m-1" src="../public/images/alex.jpg" alt="image du personnel de la team">
-
+						<div class="col-12 col-md-6 container_josephine">
+							<img class="image bottom img-fluid m-1" src="../public/images/alex.jpg" alt="image du personnel de la team">
+							<div class="overlay">
+							<img class="overlay top img-fluid m-1" src="../public/images/alex2.jpg" alt="image du personnel de la team">
+							<h3 class="overlay prenom text-center" style="color: black;">Alexandre</h3>
 						</div>
-						<div  class="col-12 col-md-6 ">
-							<img class="top img-fluid m-1" src="../public/images/aurelien2.jpg" alt="image du personnel de la team">
-							<img class="bottom img-fluid m-1" src="../public/images/aurelien.jpg" alt="image du personnel de la team">
 						</div>
-					</div>
-					<div class="row">
-						<div  class="col-12 col-md-6 ">
-							<img class="top img-fluid m-1" src="../public/images/elisa2.jpg" alt="image du personnel de la team">
-							<img class="bottom img-fluid m-1" src="../public/images/elisa.jpg" alt="image du personnel de la team">
+						<div class="col-12 col-md-6 container_josephine ">
+							<img class="image top img-fluid m-1" src="../public/images/aurelien.jpg" alt="image du personnel de la team">
+							<div class="overlay">
+							<img class="overlay bottom img-fluid m-1" src="../public/images/aurelien2.jpg" alt="image du personnel de la team">
+							<h3 class="overlay prenom text-center" style="color: gold;">Aurélien</h3>
 						</div>
-						<div  class="col-12 col-md-6 ">
-							<img class="top img-fluid m-1" src="../public/images/greg2.jpg" alt="image du personnel de la team">
-							<img class="bottom img-fluid m-1" src="../public/images/greg.jpg" alt="image du personnel de la team">
 						</div>
 					</div>
 					<div class="row">
-						<div  class="col-12 col-md-6 ">
-							<img class="top img-fluid m-1" src="../public/images/josephine2.jpg.jpg" alt="image du personnel de la team">
-							<img class="bottom img-fluid m-1" src="../public/images/josephine.jpg.jpg" alt="image du personnel de la team">
+						<div  class="col-12 col-md-6 container_josephine ">
+							<img class="image top img-fluid m-1" src="../public/images/elisa.jpg" alt="image du personnel de la team">
+							<div class="overlay">
+							<img class="overlay bottom img-fluid m-1" src="../public/images/elisa2.jpg" alt="image du personnel de la team">
+							<h3 class="overlay prenom text-center" style="color: white;">Elisa</h3>
 						</div>
+						</div>
+						<div class="col-12 col-md-6 container_josephine ">
+							<img class="image top img-fluid m-1" src="../public/images/greg.jpg" alt="image du personnel de la team">
+							<div class="overlay">
+							<img class="overlay bottom img-fluid m-1" src="../public/images/greg2.jpg" alt="image du personnel de la team">
+							<h3 class="overlay prenom text-center" style="color: white;">Grégory</h3>
+						</div>
+						</div>
+					</div>
+					<div class="row">
+						<div  class="col-12 col-md-6 container_josephine ">
+							<img class="image top img-fluid m-1" src="../public/images/josephine.jpg" alt="image du personnel de la team">
+							<div class="overlay">
+								<img class="overlay bottom img-fluid m-1" src="../public/images/josephine2.jpg" alt="image du personnel de la team">
+								<h3 class="overlay prenom text-center">Joséphine</h3>
+							</div>
+						</div> 
 					</div>
 				</div>
 			</div>
