--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -578,24 +578,33 @@ body.admin {
   margin-top: 4.5em;
 }
 
-#crossfade{
+.concept .container_josephine {
 position: relative;
-height: 100%;
-width: 100%;
 }
 
-#crossfade img {
-  position: absolute;
-  opacity: 1;
-      -webkit-transition: opacity 1s ease-in-out;
-    -moz-transition: opacity 1s ease-in-out;
-    -o-transition: opacity 1s ease-in-out;
-    -ms-transition: opacity 1s ease-in-out;    
-    transition: opacity 1s ease-in-out;
+.concept .image {
+  display: block;
+  width: 100%;
+  height: auto;
 }
- 
-#crossfade img.top:hover {
-    opacity:0;
+
+.concept .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+}
+.concept .container_josephine:hover .overlay {
+  opacity: 1;
+}
+.concept .prenom {
+  justify-content: center;
+  top:60%;
 }
 
 /* --------------------
