--- a/views/annonce_emploi.pug
+++ b/views/annonce_emploi.pug
@@ -5,10 +5,13 @@
          - let date_final = date_format.toISOString().slice(0,10);
          - let nbModal = 'Annonce' + i
          - let nom_emploi = emploi[i].nom_poste
+         - let url_files = emploi[i].logo
+         - let src_logo = '/images/emplois/'
+         - let src_final = src_logo+ url_files
          .col-6.col-md-5.offset-1.content_emploi
           h2= emploi[i].nom_poste
           .info_emploi
-            img.logo_entreprise(src='http://via.placeholder.com/150x150')
+            img.logo_entreprise(src=src_final)
             .detail_emploi
               ul.list_detail
                 li.liste_emploi
@@ -43,7 +46,7 @@
                     .container
                       .row
                         .col-12.col-lg-6
-                          img.logo_modal(src='http://via.placeholder.com/300x300')
+                          img.logo_modal(src='')
                         .col-12.col-lg-6.descri_modal
                           .profil_modal
                             h4  Description du poste
