--- a/views/video_header.pug
+++ b/views/video_header.pug
@@ -9,7 +9,7 @@ header#header
     .container-fluid.content_searchbar
         .row
           .col-12.col-lg-6.offset-lg-3.text-center
-            form.search_bar(action='/emploi/search' method='get')
+            form.search_bar(action='/emploi/search' method='post')
               .input-group
                 input.custom-select(type='text' name="poste", placeholder="Language souhaite")
               .input-group
