pb image modal OK

--- a/views/annonce_emploi.pug
+++ b/views/annonce_emploi.pug
@@ -46,7 +46,7 @@
                     .container
                       .row
                         .col-12.col-lg-6
-                          img.logo_modal(src='')
+                          img.logo_modal(src=src_final)
                         .col-12.col-lg-6.descri_modal
                           .profil_modal
                             h4  Description du poste
