--- a/views/articles_blog.pug
+++ b/views/articles_blog.pug
@@ -6,18 +6,17 @@ section#blog
           .col-xs-12.col-sm-4.col-md-4.col-lg-3
             .picture
               a(href='#')
-                img.img-fluid(src=(blog.images))
+                img.img-fluid(src=blog.images)
               .keyword_box
                 .keyword_txt= blog.category
           .col-xs-12.col-sm-7.col-md-7.col-lg-6
             .content
               small
-                = blog.date_parution 
+                = moment(blog.date_parution).format('LL')
                 |  |  
                 strong Par 
                   = blog.autor
             h4
-              a(href='#') DEVOPS, UN CHEMIN DE PROGR&Egrave;S OUVERT &Agrave; TOUS.
-            p
-              | DevOps est aujourd&rsquo;hui un mod&egrave;le de transformation incontournable pour les DSI. Mais qu&rsquo;en est-il de sa mise en &oelig;uvre concr&egrave;te ?
+              a(href='#')= blog.title
+            p= blog.description
         hr
