--- a/views/formulaire.pug
+++ b/views/formulaire.pug
@@ -25,6 +25,10 @@
           label.form_col(for='experience') Exp&eacute;rience :
           input#experience(name='experience', type='textarea', placeholder='L\'expérience qui fait la différence')
           span.tooltip Le champ exp&eacute;rience ne peut pas &ecirc;tre vide
+        .col-6.col-sm-4
+          label.form_col(for='departement') Departement :
+          input#experience(name='experience', type='textarea', placeholder='00')
+          span.tooltip Le champ dept ne peut être vide
       .row.formOffre
         .col-12.col-sm-6
           label.form_col(for='descEmploi') Description du poste :
