--- a/views/section_collab.pug
+++ b/views/section_collab.pug
@@ -6,12 +6,12 @@
       .dev.col-12.col-sm-6
         .perso.row
           .dev.col-5
-            img.img-fluid.d01(src='images/'+collab[i].image alt='dev01')
+            img.img-fluid.d01(src='images/'+collab[i].images alt='dev01')
           .devDesc.col-7
             p.name= collab[i].name
             p.age= collab[i].age
             br
-            p.xp Exp&eacute;rience
+            p.xp Exp&eacute;rience :
             p.exp= collab[i].experience
             br
             p.description
