--- a/views/validation.pug
+++ b/views/validation.pug
@@ -3,44 +3,49 @@ extends layout
 block content
   body
     .container.boxValid
-      .row
-        .col-10
-          p.title= valid.nom_poste
-        .col-2
-          p.titleDate= date_final
-      .row
-        .col-2
-          p.subtitle= valid.recruteur
-        .col-2
-          p.subtitle= valid.localisation
-        .col-2
-          p.subtitle= valid.departement
-        .col-2
-          p.subtitle= valid.duree
-        .col-2
-          p.subtitle= valid.diplome
-        .col-2
-          p.subtitle= valid.experience
-      .row
-        .col-12
-          p.textTitle Description du poste
-      .row
-        .col-12
-          p.text= valid.poste
-      .row
-        .col-12
-          p.textTitle Description de l'entreprise
-      .row
-        .col-12
-          p.text= valid.entreprise
-      .row
-        .col-12
-          p.textTitle Compétences requises
-      .row
-        .col-12
-          p.text= valid.competences
-      .row
-        .col-6.bordDroit
-          i.fas.fa-times.fa-2x
-        .col-6.bordTop
-          i.fas.fa-check.fa-2x
+      - for (var i = 0; i < valid.length; i++)
+        .row
+          .col-10
+            p.title= valid[i].nom_poste
+            .col-2
+              p.titleDate= moment(valid[i].date).format('L')
+        .row
+          .col-2
+            p.subtitle= valid[i].recruteur
+          .col-2
+            p.subtitle= valid[i].localisation
+          .col-2
+            p.subtitle= valid[i].departement
+          .col-2
+            p.subtitle= valid[i].duree
+          .col-2
+            p.subtitle= valid[i].diplome
+          .col-2
+            p.subtitle= valid[i].experience
+        .row
+          .col-12
+            p.textTitle Description du poste
+        .row
+          .col-12
+            p.text= valid[i].poste
+        .row
+          .col-12
+            p.textTitle Description de l'entreprise
+        .row
+          .col-12
+            p.text= valid[i].entreprise
+        .row
+          .col-12
+            p.textTitle Compétences requises
+        .row
+          .col-12
+            p.text= valid[i].competences
+        .row
+          .col-6.bordDroit
+            form#myForm(class='form-valide' method='POST' action='/validation/delete/'+valid[i].id+'?_method=DELETE')
+              button(type='submit', name='action', value='delete')
+                i.fas.fa-times.fa-2x
+          .col-6.bordTop
+            form#myForm(class='form-valide' method='POST' action='/validation/valider/'+valid[i].id+'?_method=PUT')
+              button(type='submit', name='action', value='add')
+                i.fas.fa-check.fa-2x
