rectif serious bar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -583,7 +583,7 @@ body.admin {
 position: relative;
 }
 
-.concept .image {
+.concept .imaggit e {
   display: block;
   width: 100%;
   height: auto;
