--- a/views/serious-bar.pug
+++ b/views/serious-bar.pug
@@ -6,5 +6,5 @@ section#serious-bar.bg-blue.pt-l.pb-l
           .col-4
             i.fas.fa-4x(class=bar[i].picto)
             .counter-value(data-count=bar[i].numbers) 0
-            h2= bar.name
+            h2= bar[i].name
   // /.container
