--- a/views/carousel-job.pug
+++ b/views/carousel-job.pug
@@ -1,106 +1,24 @@
 section#job.bg-white.pt-l.pb-l
   .container
     .slick
-      article
-        h2.text-center Développeur React (H/F)
-        figure
-          img.float-left.mr-3(src='http://via.placeholder.com/75x75', alt='')
-          figcaption
-            h3 Wild Code School Bordeaux
-            p Ecole de formation Web
-        div
-          p.mb-0
-            i.fas.fa-briefcase.mr-2
-            | CDI
-          p.mb-0
-            i.fas.fa-map-marker-alt.mr-2
-            | Bordeaux
-          p.mb-0
-            i.far.fa-clock.mr-2
-            | Il y a 5 minutes
-      article
-        h2.text-center Product Owner
-        figure
-          img.float-left.mr-3(src='http://via.placeholder.com/75x75', alt='')
-          figcaption
-            h3 Ubisoft
-            p Développeur de logiciel
-        div
-          p.mb-0
-            i.fas.fa-briefcase.mr-2
-            | CDI
-          p.mb-0
-            i.fas.fa-map-marker-alt.mr-2
-            | Pessac
-          p.mb-0
-            i.far.fa-clock.mr-2
-            | Il y a 1 heure
-      article
-        h2.text-center Développeur Android (H/F)
-        figure
-          img.float-left.mr-3(src='http://via.placeholder.com/75x75', alt='')
-          figcaption
-            h3 Meetic
-            p Site de rencontre
-        div
-          p.mb-0
-            i.fas.fa-briefcase.mr-2
-            | CDD
-          p.mb-0
-            i.fas.fa-map-marker-alt.mr-2
-            | Talence
-          p.mb-0
-            i.far.fa-clock.mr-2
-            | Il y a 2 heures
-      article
-        h2.text-center Développeur React (H/F)
-        figure
-          img.float-left.mr-3(src='http://via.placeholder.com/75x75', alt='')
-          figcaption
-            h3 Wild Code School Bordeaux
-            p Ecole de formation Web
-        div
-          p.mb-0
-            i.fas.fa-briefcase.mr-2
-            | CDI
-          p.mb-0
-            i.fas.fa-map-marker-alt.mr-2
-            | Bordeaux
-          p.mb-0
-            i.far.fa-clock.mr-2
-            | Il y a 5 minutes
-      article
-        h2.text-center Product Owner
-        figure
-          img.float-left.mr-3(src='http://via.placeholder.com/75x75', alt='')
-          figcaption
-            h3 Ubisoft
-            p Développeur de logiciel
-        div
-          p.mb-0
-            i.fas.fa-briefcase.mr-2
-            | CDI
-          p.mb-0
-            i.fas.fa-map-marker-alt.mr-2
-            | Pessac
-          p.mb-0
-            i.far.fa-clock.mr-2
-            | Il y a 1 heure
-      article
-        h2.text-center Développeur Android (H/F)
-        figure
-          img.float-left.mr-3(src='http://via.placeholder.com/75x75', alt='')
-          figcaption
-            h3 Meetic
-            p Site de rencontre
-        div
-          p.mb-0
-            i.fas.fa-briefcase.mr-2
-            | CDD
-          p.mb-0
-            i.fas.fa-map-marker-alt.mr-2
-            | Talence
-          p.mb-0
-            i.far.fa-clock.mr-2
-            | Il y a 2 heures
-  // /.container
+      - for (let i = 0; i < emploi.length; i++)
+          - let url_files = emploi[i].logo
+          - let src_logo = '/images/emplois/'
+          - let src_final = src_logo+ url_files
+          - let duree = emploi[i].duree
+          - let ville = emploi[i].localisation
+          article
+            h2.text-center= emploi[i].nom_poste
+            figure
+              img.float-left.mr-3(src=src_final)
+              figcaption
+                h3= emploi[i].recruteur
+            div
+              p.mb-0
+                i.fas.fa-briefcase.mr-2
+                | #{duree}
+              p.mb-0
+                i.fas.fa-map-marker-alt.mr-2
+                | #{ville}
+             
+                
