--- a/views/full_article.pug
+++ b/views/full_article.pug
@@ -5,6 +5,6 @@ block content
         include nav.pug
         include blog_header.pug
     body
-        include articles_blog.pug
+        include blog_id.pug
     footer
         include footer_collab.pug
