--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -106,16 +106,25 @@ body{
   background: none;
 }
 
-// Partie validation
+/*Partie Validation*/
 
 .boxValid {
-    border: 1px solid black;
-    border-radius: 0.3em;
-  margin-top:2%;
+  background-color: white;
+  border-radius: 0.3em;
+  margin-top:5%;
+  padding:5%;
 }
-.bordDroit{border-right:1px dashed black; border-top:1px dashed black;}
-.bordTop{border-top:1px dashed black;}
-.fas{text-align:center; padding:2% 47%;}
+.bordDroit{
+  border-right:1px dashed black;
+  border-top:1px dashed black;
+}
+.bordTop{
+  border-top:1px dashed black;
+}
+.fas{
+  text-align:center;
+  padding:2% 47%;
+}
 .fa-times{color:red;}
 .fa-check{color:green;}
 .boxValid .title{font-variant:small-caps; font-size:2em; text-align:left;}
