--- a/views/concept2.pug
+++ b/views/concept2.pug
@@ -23,32 +23,32 @@
       #photo1.col-12.col-md-8
         .row
           .col-12.col-md-6.container_josephine
-            img.image.bottom.img-fluid.m-1(src='images/alex.jpg', alt='image du personnel de la team')
+            img.image.top.img-fluid.m-1(src='images/josephine.jpg', alt='image du personnel de la team')
             .overlay
-            img.overlay.top.img-fluid.m-1(src='images/alex2.jpg', alt='image du personnel de la team')
-            h3.overlay.prenom.text-center(style='color: black;') Alexandre
+            img.overlay.bottom.img-fluid.m-1(src='images/josephine2.jpg', alt='image du personnel de la team')
+            h3.overlay.prenom.text-center.josephine Joséphine
           .col-12.col-md-6.container_josephine
             img.image.top.img-fluid.m-1(src='images/aurelien.jpg', alt='image du personnel de la team')
             .overlay
             img.overlay.bottom.img-fluid.m-1(src='images/aurelien2.jpg', alt='image du personnel de la team')
-            h3.overlay.prenom.text-center(style='color: gold;') Aurélien
+            h3.overlay.prenom.text-center.aurelien(style='color: white;') Aurélien
         .row
           .col-12.col-md-6.container_josephine
             img.image.top.img-fluid.m-1(src='images/elisa.jpg', alt='image du personnel de la team')
             .overlay
             img.overlay.bottom.img-fluid.m-1(src='images/elisa2.jpg', alt='image du personnel de la team')
-            h3.overlay.prenom.text-center(style='color: black;') Elisa
+            h3.overlay.prenom.text-center.elisa(style='color: black;') Elisa
           .col-12.col-md-6.container_josephine
             img.image.top.img-fluid.m-1(src='images/greg.jpg', alt='image du personnel de la team')
             .overlay
             img.overlay.bottom.img-fluid.m-1(src='images/greg2.jpg', alt='image du personnel de la team')
-            h3.overlay.prenom.text-center(style='color: white;') Grégory
+            h3.overlay.prenom.text-center.greg(style='color: black;') Grégory
         .row
           .col-12.col-md-6.container_josephine
-            img.image.top.img-fluid.m-1(src='images/josephine.jpg', alt='image du personnel de la team')
+            img.image.bottom.img-fluid.m-1(src='images/alex.jpg', alt='image du personnel de la team')
             .overlay
-            img.overlay.bottom.img-fluid.m-1(src='images/josephine2.jpg', alt='image du personnel de la team')
-            h3.overlay.prenom.text-center Joséphine
+            img.overlay.top.img-fluid.m-1(src='images/alex2.jpg', alt='image du personnel de la team')
+            h3.overlay.prenom.text-center.alexandre(style='color: black;') Alexandre
 
 script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
 script.
