--- a/views/footer_collab.pug
+++ b/views/footer_collab.pug
@@ -69,7 +69,7 @@ section#myFooter
           i.fab.fa-facebook-square
     .row.mention(style='text-align: center;')
       .col
-        p Alex et Grey sont géniaux
+        p Wow is magic
       .col.cl-effect-1
         a(href='https://www.service-public.fr/professionnels-entreprises/vosdroits/F31228' target='_blank') Mentions l&eacute;gales
       .col.cl-effect-1
