--- a/views/concept2.pug
+++ b/views/concept2.pug
@@ -1,15 +1,15 @@
 .container.margin-tibo
   section.concept.text-center
-    h2 Concept
+    h1(style='color: #8f201a;') Concept
     .presentation.text-justify
       .row
         p
           | Ici on aime manger du de bons produits pendant qu'on travail !
           | Un vrai parcours du combattant pour tous ceux qui n’en connaissent pas forcément les codes. En 2018, chercher un job sur Internet est toujours un calvaire, les sites d’emploi étant peu intuitifs et les sites carrière des entreprises insuffisamment détaillés.
-          | Nous sommes des trentenaires qui ont connu cette folie est on va change rotut ca pour vous offrir toutes les informations dont vous avez besoin pour découvrir blablalblalblachez celles qui vous intéressent le plus. Chaque semaine, nous blalblablalb ctionnons pour vous les meilleures
+          | Si tu lis vraiment ce texte tape dans tes mains. Cette folie est on va change rotut ca pour vous offrir toutes les informations dont vous avez besoin pour découvrir celles qui vous intéressent le plus. Chaque semaine on vous offre le meilleur.
   // End prensetation
   section.team.concept.text-justify
-    h2.text-center.text-justify Team
+    h1.text-center.text-justify Team
     .row
       .col-12.col-md-4
         h4.text-center Ce qu'ils disent sur l'équie
@@ -18,7 +18,7 @@
           | Et sinon, le vendredi c'est apéro, d'habitude c'est Coralie et Julien qui invitent.
         h4.text-center Good to know
         p
-          | Tu pourras jouer à Mario Kart toute la journée si tu n'es pas motivé pour travailler. Ateliers d’équipes, journées d’inspiration, batailles de polochons, sont de rigueur... Les occasions de questionner et d'enrichir notre manière de travailler ne manquent pas !
+          | Tu pourras jouer à Mario Kart toute la journée si tu n'es pas motivé pour travailler et ça se passe dans la cave! Ateliers d’équipes, journées d’inspiration, batailles de polochons, sont de rigueur... Les occasions de questionner et d'enrichir notre manière de travailler ne manquent pas !
           | Et sinon, bravo à ceux qui lisent ce texte.
       #photo1.col-12.col-md-8
         .row
