--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -575,13 +575,37 @@ body.admin {
 ------------------------ */
 
 .margin-tibo {
-  margin-top: 4.5em;
+  margin-top: 5.5em;
   margin-bottom: 1em;
 }
 
+.concept h4 {
+  color: white;
+  background-color: #8f201a;
+  font-weight: bold;
+  margin-top: 2em;
+  margin-bottom: 1em;
+  border-radius: 0.1em;
+  box-shadow: 2px 2px 20px black;
+}
+}
+
+.concept h1 {
+  color: #8f201a;
+  margin-top: 1.5em;
+  margin-bottom: 1em;
+}
+
+.team h1 {
+  color: #8f201a;
+  margin-top: 1em;
+  margin-left: 35%;
+  margin-bottom:0.2em;
+} 
 .concept .container_josephine {
 position: relative;
 }
+
 
 .concept .image {
   display: block;
@@ -603,6 +627,7 @@ position: relative;
 .concept .container_josephine:hover .overlay {
   opacity: 1;
 }
+
 .concept .prenom {
   justify-content: center;
   bottom: :20%;
