--- a/views/section_collab.pug
+++ b/views/section_collab.pug
@@ -2,7 +2,7 @@
   .titre.row
     h2 Nos diff&eacute;rents collaborateurs
   .row
-    - for (var i = 0; i < 4; i++)
+    - for (var i = 0; i < collab.length; i++)
       .dev.col-12.col-sm-6
         .perso.row
           .dev.col-5
