ajout/modif/suppression -ok

--- a/views/modal_ajout_ba.pug
+++ b/views/modal_ajout_ba.pug
@@ -1,8 +1,8 @@
-div.modal.modal-id(id='modalAjout')
+div.modal.modal-id(id='modalAjoutBa')
   .modal-dialog
       .modal-content
         .modal-header
-          h2.modal-title AJOUT
+          h2.modal-title AJOUT BAR
           |
           button.close(type='button', data-dismiss='modal', aria-label='Close')
             span(aria-hidden='true') &times;
