--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -106,25 +106,16 @@ body{
   background: none;
 }
 
-/*Partie Validation*/
+// Partie validation
 
 .boxValid {
-  background-color: white;
-  border-radius: 0.3em;
-  margin-top:5%;
-  padding:5%;
+    border: 1px solid black;
+    border-radius: 0.3em;
+  margin-top:2%;
 }
-.bordDroit{
-  border-right:1px dashed black;
-  border-top:1px dashed black;
-}
-.bordTop{
-  border-top:1px dashed black;
-}
-.fas{
-  text-align:center;
-  padding:2% 47%;
-}
+.bordDroit{border-right:1px dashed black; border-top:1px dashed black;}
+.bordTop{border-top:1px dashed black;}
+.fas{text-align:center; padding:2% 47%;}
 .fa-times{color:red;}
 .fa-check{color:green;}
 .boxValid .title{font-variant:small-caps; font-size:2em; text-align:left;}
