--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -503,10 +503,12 @@ color:#0a7893;
  color:rgba(10, 120,147, 1);
 }
 
-
 .collab .name, .collab .age, .collab .xp, .collab .exp{
   display:inline-block; padding-right: 5%;
 
+}
+#log {
+  margin-left: -5em;
 }
 /*------------------------
         FUN BAR
@@ -1165,4 +1167,38 @@ z-index: 1;
   #header_blog .logo_wild{
     display: none
   }
+}
+
+
+
+// Partie validation
+
+.boxValid {
+    border: 1px solid black;
+    border-radius: 0.3em;
+  margin-top:2%;
+}
+.bordDroit{border-right:1px dashed black; border-top:1px dashed black;}
+.bordTop{border-top:1px dashed black;}
+.fas{text-align:center; padding:2% 47%;}
+.fa-times{color:red;}
+.fa-check{color:green;}
+.boxValid .title{font-variant:small-caps; font-size:2em; text-align:left;}
+.boxValid .titleDate{font-size:1.3em; padding-top:9%;}
+.boxValid .text{text-align:justify;}
+.boxValid .textTitle{
+    border-top: 1px dashed black;
+    margin: 2% 30%;
+    padding-top: 2%;
+    text-align: center;
+    font-weight: bold;
+  }
+.boxValid .form-valide {
+  text-align: center;
+  padding-top:2%;
+}
+
+.boxValid button {
+  background: none;
+  border:none;
 }
