--- a/views/admin.pug
+++ b/views/admin.pug
@@ -11,17 +11,17 @@ block content
             .profile-name
               p.name M. Jones
           li
-            a.links#modifBar(href='#', data-showdiv='contentBar') Bar
+            a.links#modifBar(href='#contentBar', data-showdiv='contentBar') Bar
           li
-            a.links#modifBlog(href='#', data-showdiv='contentBlog') Blog
+            a.links#modifBlog(href='#contentBlog', data-showdiv='contentBlog') Blog
           li
-            a.links#modifOffres(href='#', data-showdiv='contentOffres') Offres Emplois
+            a.links#modifOffres(href='#contentOffres', data-showdiv='contentOffres') Offres Emplois
           li
-            a.links#modifCollab(href='#', data-showdiv='contentCollab') Collaborateurs
+            a.links#modifCollab(href='#contentCollab', data-showdiv='contentCollab') Collaborateurs
           li
-            a.links#modifContact(href='#', data-showdiv='contentFooter') Contact
+            a.links#modifContact(href='#contentFooter', data-showdiv='contentFooter') Contact
           li
-            a.links#modifValidation(href='#', data-showdiv='contentValidation') Validation
+            a.links#modifValidation(href='#contentValidation', data-showdiv='contentValidation') Validation
       #page-content-wrapper
         .container-fluid
           include admin_modal.pug
