--- a/views/modal_ajout_blog.pug
+++ b/views/modal_ajout_blog.pug
@@ -2,7 +2,7 @@ div.modal.modal-id(id='modalAjoutBlog')
   .modal-dialog
       .modal-content
         .modal-header
-          h2.modal-title AJOUT OFFRES EMPLOIS
+          h2.modal-title AJOUT BILLETS DE BLOG
           |
           button.close(type='button', data-dismiss='modal', aria-label='Close')
             span(aria-hidden='true') &times;
